--- a/iisl-profile/package.json
+++ b/iisl-profile/package.json
@@ -37,6 +37,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.11"
+    "tailwindcss": "^3.4.11",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
   }
 }
